Fix ugly wrapped headers with line-height.

--- a/images/site.css
+++ b/images/site.css
@@ -37,6 +37,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+	line-height: 2.2ex;
 	font-weight: 700;
 	margin-top: 4ex;
 }
